[package]
name = "dwatch"
version = "0.9.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.1"
ansi_term = "0.12.1"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["serde"] }
itertools = "0.11.0"
parking_lot = "0.12.4"
serde = "1.0.219"
serde_json = "1.0.142"
signal-hook = "0.3.18"
wait-timeout = "0.2.1"
