[package]
name = "dwatch"
version = "0.9.8"
edition = "2021"
authors = ["Nicola Bonelli <nicola.bonelli@gmail.com>"]
description = "DWatch is a modern replacement for the watch Unix tool"
license = "MIT"

readme = "README.md"
repository = "https://github.com/awgn/dwatch"
keywords = ["cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
ansi-escapes = "0.1.1"
owo-colors = "4.3.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["serde"] }
itertools = "0.11.0"
parking_lot = "0.12.5"
rustc-hash = "2.1.2"
serde = "1.0.228"
serde_json = "1.0.149"
signal-hook = "0.3.18"
wait-timeout = "0.2.1"
